--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>跑步感悟 | 我的跑步日记</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&family=Noto+Serif+SC:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.10.3/sql-wasm.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script>
+        // 配置SQL.js
+        if (!initSqlJs) {
+            throw new Error('SQL.js库加载失败');
+        }
+    </script>
 </head>
 <body>
     <div class="app-container">
@@ -35,16 +43,45 @@
                                 <span class="sort-icon">▼</span>
                             </button>
                         </div>
-                        <button id="addArticleBtn" class="primary-btn">
-                            ✍️ 写感悟
-                        </button>
+                        <div class="import-export-group">
+                            <input type="file" id="importFile" accept=".json" style="display: none;">
+                            <input type="file" id="importEventExcelFile" accept=".xlsx" style="display: none;">
+                            <button id="importBtn" class="primary-btn" onclick="document.getElementById('importFile').click()">
+                                📂 导入
+                            </button>
+                            <button id="importEventExcelBtn" class="primary-btn">
+                                📊 导入赛事记录表
+                            </button>
+                            <button id="exportBtn" class="primary-btn" onclick="exportArticles()">
+                                💾 导出
+                            </button>
+                            <button id="addArticleBtn" class="primary-btn">
+                                ✍️ 写感悟
+                            </button>
+                        </div>
                     </div>
                 </section>
 
                 <!-- 文章列表 -->
                 <section class="articles-section">
+                    <div class="section-header">
+                        <h2>跑步感悟</h2>
+                    </div>
                     <div class="articles-grid" id="articlesGrid">
                         <!-- 文章卡片将通过JavaScript动态生成 -->
+                    </div>
+                </section>
+
+                <!-- 赛事记录列表 -->
+                <section class="events-section">
+                    <div class="section-header">
+                        <h2>赛事记录</h2>
+                        <button id="addEventBtn" class="primary-btn">
+                            ➕ 添加赛事
+                        </button>
+                    </div>
+                    <div class="events-grid" id="eventsGrid">
+                        <!-- 赛事卡片将通过JavaScript动态生成 -->
                     </div>
                 </section>
 
@@ -136,6 +173,126 @@
                         </div>
                         <div class="article-detail" id="articleDetail">
                             <!-- 文章详情将通过JavaScript动态生成 -->
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 添加赛事模态框 -->
+                <div id="addEventModal" class="modal">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h2>添加赛事记录</h2>
+                            <span class="close-btn">&times;</span>
+                        </div>
+                        <form id="addEventForm" class="event-form">
+                            <div class="form-group">
+                                <label for="eventName">赛事名称</label>
+                                <input type="text" id="eventName" name="eventName" placeholder="输入赛事名称..." required>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group">
+                                    <label for="eventDate">日期</label>
+                                    <input type="date" id="eventDate" name="eventDate" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="eventDistance">距离 (公里)</label>
+                                    <input type="number" id="eventDistance" name="eventDistance" step="0.001" placeholder="输入距离..." required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="eventLocation">地点</label>
+                                <input type="text" id="eventLocation" name="eventLocation" placeholder="输入赛事地点..." required>
+                            </div>
+                            <div class="form-group">
+                                <label for="eventFinishTime">完成时间</label>
+                                <input type="text" id="eventFinishTime" name="eventFinishTime" placeholder="格式：HH:MM:SS" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="eventCategory">赛事类型</label>
+                                <select id="eventCategory" name="eventCategory">
+                                    <option value="全程马拉松">全程马拉松</option>
+                                    <option value="半程马拉松">半程马拉松</option>
+                                    <option value="10公里">10公里</option>
+                                    <option value="5公里">5公里</option>
+                                    <option value="越野跑">越野跑</option>
+                                    <option value="其他">其他</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="eventNotes">备注</label>
+                                <textarea id="eventNotes" name="eventNotes" rows="4" placeholder="输入赛事备注..."></textarea>
+                            </div>
+                            <div class="form-actions">
+                                <button type="button" class="cancel-btn">取消</button>
+                                <button type="submit" class="submit-btn">保存</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <!-- 编辑赛事模态框 -->
+                <div id="editEventModal" class="modal">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h2>编辑赛事记录</h2>
+                            <span class="close-btn">&times;</span>
+                        </div>
+                        <form id="editEventForm" class="event-form">
+                            <input type="hidden" id="editEventId" name="editEventId">
+                            <div class="form-group">
+                                <label for="editEventName">赛事名称</label>
+                                <input type="text" id="editEventName" name="editEventName" placeholder="输入赛事名称..." required>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group">
+                                    <label for="editEventDate">日期</label>
+                                    <input type="date" id="editEventDate" name="editEventDate" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="editEventDistance">距离 (公里)</label>
+                                    <input type="number" id="editEventDistance" name="editEventDistance" step="0.001" placeholder="输入距离..." required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="editEventLocation">地点</label>
+                                <input type="text" id="editEventLocation" name="editEventLocation" placeholder="输入赛事地点..." required>
+                            </div>
+                            <div class="form-group">
+                                <label for="editEventFinishTime">完成时间</label>
+                                <input type="text" id="editEventFinishTime" name="editEventFinishTime" placeholder="格式：HH:MM:SS" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="editEventCategory">赛事类型</label>
+                                <select id="editEventCategory" name="editEventCategory">
+                                    <option value="全程马拉松">全程马拉松</option>
+                                    <option value="半程马拉松">半程马拉松</option>
+                                    <option value="10公里">10公里</option>
+                                    <option value="5公里">5公里</option>
+                                    <option value="越野跑">越野跑</option>
+                                    <option value="其他">其他</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="editEventNotes">备注</label>
+                                <textarea id="editEventNotes" name="editEventNotes" rows="4" placeholder="输入赛事备注..."></textarea>
+                            </div>
+                            <div class="form-actions">
+                                <button type="button" class="cancel-btn">取消</button>
+                                <button type="submit" class="submit-btn">保存修改</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <!-- 赛事详情模态框 -->
+                <div id="eventDetailModal" class="modal">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h2 id="eventDetailTitle"></h2>
+                            <span class="close-btn">&times;</span>
+                        </div>
+                        <div class="event-detail" id="eventDetail">
+                            <!-- 赛事详情将通过JavaScript动态生成 -->
                         </div>
                     </div>
                 </div>
